# receipt.money

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  package-lock.json  rust-toolchain.toml
frontend/: README.md
frontend/public/: receipt_money.json
frontend/src/components/: AppBar.tsx
frontend/src/utils/: deposit.ts
programs/receipt-money/: Cargo.toml
programs/receipt-money/src/: errors.rs  lib.rs
programs/receipt-money/src/instructions/: deposit.rs
programs/receipt-money/src/state/: receipto_state.rs
programs/receipt-money/src/utils/: token.rs
programs/receipt_money/: Cargo.toml
programs/receipt_money/src/: errors.rs  lib.rs
programs/receipt_money/src/instructions/: deposit.rs  initialize.rs
programs/receipt_money/src/state/: mod.rs  receipt_state.rs
programs/receipt_money/src/utils/: token.rs
programs/receipto-fi/src/: lib.rs
programs/receipto-fi/src/instructions/: initialize.rs
programs/receipto-fi/src/state/: mod.rs
public/: index.html
simulation/: data.json  index.js  package-lock.json  package.json
simulation/src/actions/admin/: initialize.ts
simulation/src/config/: index.ts
simulation/src/instructions/: 01_initialize.ts  02_deposit.ts
simulation/src/pda/: index.ts
simulation/src/utils/: dataManager.ts  debugTransaction.ts  index.ts  loadKeypairFromFile.ts  loadMintAddresses.ts  wrapUnwrapSol.ts
simulation/targets/idl/: receipt_money.json
simulation/targets/types/: receipt_money.ts
src/: App.js
src/components/: DCA.js  Header.js  LimitOrder.js  Swap.js  TradingMethods.js  TradingWorks.js  WalletConnectButton.js  options.js
tests/: .env  package-lock.json  package.json  receipt-money.ts  tsconfig.json
tests/src/: receipto-fi.ts
(+4 files in other folders)
