[workspace]
members = [
    "programs/*",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" , features = ["mint", "spl-token", "token", "metadata"]}
spl-token-metadata-interface = { version = "=0.3.3" }
solana-program = { version = "1.18.25" }
spl-type-length-value = "0.4.3"