[package]
name = "receipt_money"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "receipt_money"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-log = []
client = []
jupiter-cpi = ["no-entrypoint"]
solana=[]
anchor-debug=[]
test-sbf=[]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-metadata-interface = { workspace = true }
solana-program = { workspace = true }
spl-type-length-value = { workspace = true }
